# mini_trainer

./: Readme.md  osft_trace_benchmark_run.md  pyproject.toml  test-vector-projection.py  tox.ini
docs/: trace_benchmark_reproduction.md
regression_tests/: benchmark_batching.py  test_gpt_oss_conversion_accuracy.py  test_osft_fidelity_script.py  test_osft_orthogonalization.py
research_scratch/: fsdp1_dummy_script.py  fsdp1_wrapper.py  sequence_length_experiment.py
results/: .gitignore
results/qwen2.5-3b_osft_ratio0.10/: blog_post.md
results/qwen2.5-3b_osft_ratio0.10/mmlu/original/Qwen__Qwen2.5-3B-Instruct/: results_2026-03-08T19-22-15.034632.json
results/qwen2.5-3b_osft_ratio0.10/mmlu/osft_after_task_1/__tmp__checkpoints__trace_osft_qwen25__task_1_C-STANCE__hf_format__samples_15000.0/: results_2026-03-08T21-23-00.379208.json
results/qwen2.5-3b_osft_ratio0.10/mmlu/osft_after_task_2/__tmp__checkpoints__trace_osft_qwen25__task_2_FOMC__hf_format__samples_15000.0/: results_2026-03-08T22-25-06.078194.json
results/qwen2.5-3b_osft_ratio0.10/mmlu/osft_after_task_3/__tmp__checkpoints__trace_osft_qwen25__task_3_MeetingBank__hf_format__samples_9450.0/: results_2026-03-09T07-20-30.507250.json
results/qwen2.5-3b_osft_ratio0.10/mmlu/osft_after_task_4/__tmp__checkpoints__trace_osft_qwen25__task_4_Py150__hf_format__samples_13656.0/: results_2026-03-09T13-15-39.677178.json
results/qwen2.5-3b_osft_ratio0.10/mmlu/osft_after_task_5/__tmp__checkpoints__trace_osft_qwen25__task_5_ScienceQA__hf_format__samples_15000.0/: results_2026-03-09T18-58-49.517533.json
results/qwen2.5-3b_osft_ratio0.10/mmlu/osft_after_task_6/__tmp__checkpoints__trace_osft_qwen25__task_6_NumGLUE-cm__hf_format__samples_15000.0/: results_2026-03-09T21-59-45.683947.json
results/qwen2.5-3b_osft_ratio0.10/mmlu/osft_after_task_7/__tmp__checkpoints__trace_osft_qwen25__task_7_NumGLUE-ds__hf_format__samples_15000.0/: results_2026-03-10T00-55-59.389905.json
results/qwen2.5-3b_osft_ratio0.10/spectral/original/: stats.csv  summary.json
results/qwen2.5-3b_osft_ratio0.10/spectral/summary/: spectral_summary.csv
results/qwen2.5-3b_osft_ratio0.10/spectral/task_1_C-STANCE/: stats.csv  summary.json
results/qwen2.5-3b_osft_ratio0.10/spectral/task_2_FOMC/: stats.csv  summary.json
results/qwen2.5-3b_osft_ratio0.10/spectral/task_3_MeetingBank/: stats.csv  summary.json
results/qwen2.5-3b_osft_ratio0.10/spectral/task_4_Py150/: stats.csv  summary.json
results/qwen2.5-3b_osft_ratio0.10/spectral/task_5_ScienceQA/: stats.csv  summary.json
results/qwen2.5-3b_osft_ratio0.10/spectral/task_6_NumGLUE-cm/: stats.csv  summary.json
results/qwen2.5-3b_osft_ratio0.10/spectral/task_7_NumGLUE-ds/: stats.csv  summary.json
results/qwen2.5-3b_osft_ratio0.10/spectral/task_8_20Minuten/: stats.csv  summary.json
results/qwen2.5-3b_osft_ratio0.10/trace/: 20Minuten_after_task8.json  C-STANCE_after_task1.json  C-STANCE_after_task2.json  C-STANCE_after_task3.json  C-STANCE_after_task4.json  C-STANCE_after_task5.json  C-STANCE_after_task6.json  C-STANCE_after_task7.json  C-STANCE_after_task8.json  FOMC_after_task2.json  FOMC_after_task3.json  FOMC_after_task4.json  FOMC_after_task5.json  FOMC_after_task6.json  FOMC_after_task7.json  FOMC_after_task8.json  MeetingBank_after_task3.json  MeetingBank_after_task4.json  MeetingBank_after_task5.json  MeetingBank_after_task6.json  MeetingBank_after_task7.json  MeetingBank_after_task8.json  NumGLUE-cm_after_task6.json  NumGLUE-cm_after_task7.json  NumGLUE-cm_after_task8.json  NumGLUE-ds_after_task7.json  NumGLUE-ds_after_task8.json  Py150_after_task4.json  Py150_after_task5.json  Py150_after_task6.json  Py150_after_task7.json  Py150_after_task8.json  ScienceQA_after_task5.json  ScienceQA_after_task6.json  ScienceQA_after_task7.json  ScienceQA_after_task8.json
results/qwen2.5-3b_osft_ratio0.10/trace_baseline/: 20Minuten_baseline.json  C-STANCE_baseline.json  FOMC_baseline.json  MeetingBank_baseline.json  NumGLUE-cm_baseline.json  NumGLUE-ds_baseline.json  Py150_baseline.json  ScienceQA_baseline.json
scripts/: aggregate_spectral_reports.py  analyze_checkpoint_spectra.py  baselines.sh  collect_mmlu.py  compute_metrics.py  convert_to_pretrain.py  convert_trace_data.py  eval_trace_task.py  make_svd_truncated_model.py  process_data.py  report.sh  run_trace_llama3.sh  setup.sh  test_e2e.py  train_trace_osft.sh
src/mini_trainer/: __init__.py  api_train.py  async_structured_logger.py  batch_metrics.py  batch_packer.py  fsdp2_lazy_init.py  gpt_oss_utils.py  mlflow_wrapper.py  none_reduction_losses.py  osft_utils.py  sampler.py  setup_model_for_training.py  train.py  training_types.py  utils.py  vlm_utils.py  wandb_wrapper.py
tests/: conftest.py  test_api_train.py  test_async_logger.py  test_batch_lengths_to_minibatches.py  test_data_loader.py  test_data_loader_pretraining.py  test_dtype_conversion.py  test_gpt_oss_conversion_accuracy.py  test_integration_small_models.py  test_model_initialization.py  test_osft.py  test_osft_dtype_functionality.py  test_osft_fidelity.py  test_pretraining_dataset.py  test_save_model_comprehensive.py  test_scheduler_config.py  test_training_components.py  test_training_loop.py
tests/gpu_tests/: conftest.py  setup_flash_attn.py  test_distributed_utils.py  test_mixed_precision.py
tests/test_utils/: __init__.py  orthogonality.py
tutorials/: tensor_paralleism_getting_started.py
(+2 files in other folders)
