# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools>=64.0", "wheel", "torch>=2.6", "ninja", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "rhai-innovation-mini-trainer"
dynamic = ["version"] 
description = "Simple training repo which is used to house reference implementations of emerging training algorithms, such as Orthogonal Subspace Fine Tuning (OSFT)."
readme = "Readme.md"
requires-python = ">=3.11,<3.13"
license = {text = "MIT"}
authors = [
    {name = "Mini Trainer Contributors"}
]
keywords = ["machine learning", "training", "OSFT", "orthogonal subspace fine tuning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]


dependencies = [
    "torch>=2.6",
    "typer",
    "aiofiles",
    "deprecated",
    "numpy",
    "datasets",
    "transformers>=4.57.1",
    "ninja",
    "numba>=0.62.0",
    "rich",
]

[project.optional-dependencies]
cuda = [
    "flash-attn>=2.8.2",
    "liger-kernel>=0.5.10",  
    "kernels",  # for flash-attention-3
    "mamba-ssm[causal-conv1d]>=2.2.5"
]
test = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-mock",
]
dev = [
    "ruff",
    "ipython", 
    "ipykernel",
    "ipdb",
    "pytest",
    "tox",
    "tox-uv",
]
wandb = ["wandb"]
mlflow = ["mlflow>=3.0"]

[project.urls]
Homepage = "https://github.com/Red-Hat-AI-Innovation-Team/mini_trainer"
Repository = "https://github.com/Red-Hat-AI-Innovation-Team/mini_trainer"
Issues = "https://github.com/Red-Hat-AI-Innovation-Team/mini_trainer/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["mini_trainer*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["src"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "gpu: marks tests that require GPU",
    "multi_gpu: marks tests that require multiple GPUs",
]

# for dynamic versioning
[tool.setuptools_scm]
version_file = "src/mini_trainer/_version.py"
# do not include +gREV local version, required for Test PyPI upload
local_scheme = "no-local-version"

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    ".venv",
    "venv",
    "__pycache__",
    ".git",
    "build",
    "dist",
    "*.egg-info",
    "checkpoints",
    "outputs",
    "wandb",
    "mlruns",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module level import not at top (common in ML scripts for path setup)
    "E741",   # ambiguous variable name (l, O, I) - common in ML for loss, lambda
    "B007",   # unused loop variable (often intentional: for _ in range)
    "B008",   # function call in default argument (common in typer/fastapi)
    "B905",   # zip without strict= (often intentional in ML)
    "UP007",  # Use X | Y for type union (compatibility)
    "RUF001", # ambiguous unicode (intentional for i18n test strings)
    "RUF002", # ambiguous unicode in docstrings
    "RUF012", # mutable class attrs (common in dataclasses)
    "RUF013", # implicit Optional (stylistic preference)
    "RUF015", # prefer next() over [0] slice (stylistic)
    "RUF022", # __all__ not sorted (stylistic)
    "RUF059", # unused parameters (often intentional in callbacks/hooks)
    "C401",   # unnecessary generator - set comprehension (stylistic)
    "C408",   # unnecessary dict/list/tuple call (stylistic)
    "C416",   # unnecessary dict comprehension (stylistic)
    "C419",   # unnecessary comprehension in any/all (stylistic)
    "B012",   # return in finally (sometimes intentional for early exit)
    "UP042",  # use StrEnum instead of str, Enum (compatibility with older Python)
]

[tool.ruff.lint.isort]
known-first-party = ["mini_trainer"]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "F841"]  # allow assert and unused vars in tests
"__init__.py" = ["F401"]  # allow unused imports in __init__
"regression_tests/*" = ["F401", "F811", "F841"]  # allow unused and redefinitions in benchmark scripts
"research_scratch/*" = ["F401", "F841"]  # allow unused in research scripts
"tutorials/*" = ["F401", "F841"]  # allow unused in tutorials
"scripts/*" = ["E722"]  # allow bare except in scripts
"test-*.py" = ["F841"]  # allow unused vars in standalone test files

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
skip-magic-trailing-comma = false
